@@ -21,7 +21,8 @@ int  ml_config_menu_init( ml_config_menu_t *  config_menu) ;
 
 int  ml_config_menu_final( ml_config_menu_t *  config_menu) ;
 
-int  ml_config_menu_start( ml_config_menu_t *  config_menu , char *  cmd_path , int  x , int  y , int  fd) ;
+int  ml_config_menu_start( ml_config_menu_t *  config_menu , char *  cmd_path ,
+	int  x , int  y , char *  display , int  fd) ;
 
 int  ml_config_menu_write( ml_config_menu_t *  config_menu , u_char *  buf , size_t  len) ;
 
